# modernEES

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  SPEC.md  justfile
.github/workflows/: ci.yml
app/: Cargo.toml  README.md  tauri.conf.json
app/src/: main.rs
app/ui/: index.html
core/: Cargo.toml
core/src/: lib.rs  param_table.rs  props.rs  solver.rs  units.rs
core/src/parser/: ast.rs  diagnostic.rs  lexer.rs  mod.rs  parser_impl.rs  tests.rs
core/tests/: param_table.rs  props_facade.rs  solver.rs
props_coolprop/: Cargo.toml
props_coolprop/python/: coolprop_helper.py
props_coolprop/src/: lib.rs
props_coolprop/tests/: coolprop_integration.rs
