[package]
name = "modern_ees_app"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
modern_ees_core = { path = "../core" }
modern_ees_props_coolprop = { path = "../props_coolprop" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rfd = "0.15"
